src/test/ui/issues/issue-27282-reborrow-ref-mut-in-guard.stderr
error[E0596]: cannot borrow `r` as mutable, as it is immutable for the pattern guard
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
  --> $DIR/issue-27282-reborrow-ref-mut-in-guard.rs:14:25
=======
  --> $DIR/issue-27282-reborrow-ref-mut-in-guard.rs:12:25
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
   |
LL |         ref mut r if { (|| { let bar = &mut *r; **bar = false; })();
   |                         ^^                   - mutable borrow occurs due to use of `r` in closure
   |                         |
   |                         cannot borrow as mutable
   |
   = note: variables bound in patterns are immutable until the end of the pattern guard

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
